<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="ar.com.lacomarcasistemas.centrocristalesmobile.HomeActivity"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/activity_title_textsize"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_copete_home"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginBottom="@dimen/home_copete_margin_bottom"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/home_frame_padding"
        android:id="@+id/linearLayout"
        >

        <Button
            android:layout_width="@dimen/home_button_width"
            android:layout_height="@dimen/home_button_height"
            android:textSize="@dimen/home_button_textsize"
            android:text="@string/label_consulta_ot"
            android:onClick="onConsultarOrdenTrabajoClick"/>

        <Button
            android:layout_width="@dimen/home_button_width"
            android:layout_height="@dimen/home_button_height"
            android:textSize="@dimen/home_button_textsize"
            android:text="@string/label_pedido_presupuesto"
            android:onClick="onPedidoPresupuestoClick"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txtVersionInfo"
            android:text="version_info"
            android:layout_gravity="right"/>

    </LinearLayout>




</RelativeLayout>
